--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "express": "^4.16.4",
     "gulp": "^4.0.0",
     "gulp-typescript": "^5.0.0",
-    "typescript": "^3.2.2"
+    "mysql": "^2.16.0",
+    "tedious": "^4.1.3",
+    "typescript": "^3.2.2",
+    "xlsx": "^0.14.1"
   }
 }
