--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^10.12.18",
+    "config": "^3.0.1",
     "express": "^4.16.4",
     "gulp": "^4.0.0",
     "gulp-typescript": "^5.0.0",
