--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-typescript": "^5.0.0",
     "mysql": "^2.16.0",
     "tedious": "^4.1.3",
+    "tedious-connection-pool": "^1.0.5",
     "typescript": "^3.2.2",
     "xlsx": "^0.14.1"
   }
