--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "gulp": "^4.0.0",
     "gulp-typescript": "^5.0.0",
+    "mssql": "^4.3.0",
     "tedious": "^4.1.3",
     "tedious-connection-pool": "^1.0.5",
     "typescript": "^3.2.2",
