--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "NodeJS Backend API for ESSD",
   "main": "index.js",
   "scripts": {
+    "start": "node ./build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
   },
