--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./build/server.js",
+    "watch-start": "nodemon ./build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
   },
