--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
       "target": "es6",
       "module": "commonjs",
-      "outDir": "./build"
+      "outDir": "./build",
+      "lib": ["es6", "dom", "es2017"]
     },
     "include": [
       "**/*.ts"
