--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^10.12.18",
-    "bcrypt": "^3.0.4",
+    "bcryptjs": "^2.4.3",
     "config": "^3.0.1",
     "express": "^4.16.4",
     "gulp": "^4.0.0",
