--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./build/server.js",
     "watch-start": "nodemon ./build/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha build/test/test.js",
     "tsc": "tsc"
   },
   "author": "ESSD",
@@ -14,14 +14,22 @@
   "dependencies": {
     "@types/node": "^10.12.18",
     "bcryptjs": "^2.4.3",
+    "chai": "^4.2.0",
     "config": "^3.0.1",
     "express": "^4.16.4",
     "gulp": "^4.0.0",
     "gulp-typescript": "^5.0.0",
+    "mocha": "^6.0.2",
     "mssql": "^4.3.0",
     "tedious": "^4.1.3",
     "tedious-connection-pool": "^1.0.5",
+    "ts-node": "^8.0.3",
     "typescript": "^3.2.2",
+    "typings": "^2.1.1",
     "xlsx": "^0.14.1"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6"
   }
 }
