--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^10.12.18",
     "bcryptjs": "^2.4.3",
     "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "chai-json": "^1.0.0",
     "config": "^3.0.1",
     "express": "^4.16.4",
     "gulp": "^4.0.0",
