--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
       "target": "es6",
       "module": "commonjs",
       "outDir": "./build",
-      "lib": ["es6", "dom", "es2017"]
+      "lib": ["es6", "dom", "es2017"],
+      "skipLibCheck": true
     },
     "include": [
       "**/*.ts"
