--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./build/server.js",
     "watch-start": "nodemon ./build/server.js",
     "test": "mocha build/test",
+    "code-coverage-test": "nyc --reporter=html mocha build/test",
     "tsc": "tsc"
   },
   "author": "ESSD",
@@ -23,6 +24,7 @@
     "gulp-typescript": "^5.0.0",
     "mocha": "^6.0.2",
     "mssql": "^4.3.0",
+    "nyc": "^13.3.0",
     "sinon": "^7.3.0",
     "tedious": "^4.1.3",
     "tedious-connection-pool": "^1.0.5",
